--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,71 +1,42 @@
 server {
-    listen       80;
-    server_name  localhost;
+        listen 80;
+        server_name demo-docs.itsec.md www.demo-docs.itsec.md;
+        return 301 https://$host$request_uri;
+        access_log /var/log/nginx/demo-docs.itsec.md-access.log main;
+}
 
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+server {
+        listen 443 http2 ssl;
+        server_name demo-docs.itsec.md www.demo-docs.itsec.md;
+        ssl_protocols TLSv1.3 TLSv1.2;
+        ssl_ciphers 'TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-256-GCM-SHA384:TLS13-AES-128-GCM-SHA256:EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+        ssl_prefer_server_ciphers on;
+        ssl_ecdh_curve secp384r1;
+        ssl_certificate    /etc/nginx/ssl/wild.itsec.pem;
+        ssl_certificate_key    /etc/nginx/ssl/wild.itsec.key;
 
-    root /home/public_html/;
+        client_max_body_size 64M;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; always";
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Robots-Tag none;
+#        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
-    location / {
-      try_files $uri @php-apache;  
-    }
+        proxy_intercept_errors on;
+        access_log /var/log/nginx/demo-docs.itsec.md-access.log main;
+        location / {
+                proxy_connect_timeout 3600;
+                proxy_send_timeout 3600;
+                proxy_read_timeout 3600;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_cache_bypass $http_upgrade;
+                proxy_set_header Host $host;
+                proxy_set_header X-Scheme $scheme;
+                proxy_set_header X-HTTPS-Protocol $ssl_protocol;
+                proxy_pass http://10.100.56.3:80;
+        }
 
-    location ~ /\. {
-      deny all;
-      access_log off;
-      log_not_found off;
-    }
-
-    location ~ \.php$ {
-      proxy_set_header X-Real-IP  $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Host $host;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $host;
-      proxy_http_version 1.1;
-      proxy_pass http://php-apache:8001;
-    }
-
-    location @php-apache {
-      proxy_set_header X-Real-IP  $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Host $host;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $host;
-      proxy_http_version 1.1;
-      proxy_pass http://php-apache:8001;
-    }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 }
