--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -2,6 +2,8 @@ FROM marcelosantoro/php-5.4.45-fpm:5.4.45-fpm
 RUN rpm -Uvh https://rpms.remirepo.net/enterprise/remi-release-7.rpm
 RUN yum update
 # Install php extensions
+RUN yum install -y yum-config-manager
+RUN yum-config-manager --enable remi-php54
 RUN pecl install redis && docker-php-ext-enable redis
 RUN docker-php-ext-install mysqli bcmath fpm cli gd intl opcache pdo pecl-imagick mbstring mcrypt mysql pecl-xdebug pgsql soap xml && docker-php-ext-enable mysqli bcmath fpm cli gd intl opcache pdo pecl-imagick mbstring mcrypt mysql pecl-xdebug pgsql soap xml
 
