--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -12,8 +12,8 @@ server {
         ssl_ciphers 'TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-256-GCM-SHA384:TLS13-AES-128-GCM-SHA256:EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers on;
         ssl_ecdh_curve secp384r1;
-        ssl_certificate    /etc/nginx/ssl/wild.itsec.pem;
-        ssl_certificate_key    /etc/nginx/ssl/wild.itsec.key;
+        ssl_certificate    /home/vprocopan/cert/cert.pem;
+        ssl_certificate_key    /home/vprocopan/cert/key.pem;
 
         client_max_body_size 64M;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; always";
@@ -24,7 +24,7 @@ server {
 #        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
         proxy_intercept_errors on;
-        access_log /var/log/nginx/demo-docs.itsec.md-access.log main;
+        access_log  /home/vprocopan/logs/demo-docs.itsec.md-access.log main;
         location / {
                 proxy_connect_timeout 3600;
                 proxy_send_timeout 3600;
@@ -36,7 +36,8 @@ server {
                 proxy_set_header Host $host;
                 proxy_set_header X-Scheme $scheme;
                 proxy_set_header X-HTTPS-Protocol $ssl_protocol;
-                proxy_pass http://10.100.56.3:80;
+                proxy_pass http://10.100.16.11:80;
         }
 
 }
+`
