--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -36,7 +36,7 @@ server {
                 proxy_set_header Host $host;
                 proxy_set_header X-Scheme $scheme;
                 proxy_set_header X-HTTPS-Protocol $ssl_protocol;
-                proxy_pass http://10.100.16.11:9000;
+                proxy_pass http://$host:9000;
         }
 
 }
