--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -1,3 +1,3 @@
 FROM yeszao/php:5.4.45-fpm-alpine
-WORKDIR /home/vprocopan/edms/
-CMD [ "php", "./index.php" ]
+WORKDIR /home/vprocopan/nginx-apache-php-docker/edms/
+CMD [ "php", "/home/vprocopan/nginx-apache-php-docker/edms/index.php" ]
