--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -12,8 +12,8 @@ server {
         ssl_ciphers 'TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-256-GCM-SHA384:TLS13-AES-128-GCM-SHA256:EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers on;
         ssl_ecdh_curve secp384r1;
-        ssl_certificate    /home/vprocopan/cert/cert.pem;
-        ssl_certificate_key    /home/vprocopan/cert/key.pem;
+        ssl_certificate    /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key    /etc/nginx/ssl/key.pem;
 
         client_max_body_size 64M;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; always";
