--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -1,4 +1,4 @@
 FROM yeszao/php:5.4.45-fpm-alpine
-COPY ../edms /home/edsm/
+COPY ./edms /home/edsm/
 WORKDIR /home/edms/
 CMD [ "php", "/home/edms/index.php" ]
