--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         server_name demo-docs.itsec.md www.demo-docs.itsec.md;
         return 301 https://$host$request_uri;
-        access_log /var/log/nginx/demo-docs.itsec.md-access.log main;
+        access_log /var/log/nginx/access.log main;
 }
 
 server {
