--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -8,6 +8,7 @@ server {
 server {
         listen 443 http2 ssl;
         server_name demo-docs.itsec.md www.demo-docs.itsec.md;
+
         ssl_protocols TLSv1.3 TLSv1.2;
         ssl_ciphers 'TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-256-GCM-SHA384:TLS13-AES-128-GCM-SHA256:EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         ssl_prefer_server_ciphers on;
@@ -24,7 +25,7 @@ server {
 #        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
         proxy_intercept_errors on;
-        access_log  /home/vprocopan/logs/demo-docs.itsec.md-access.log main;
+        access_log  /var/log/nginx/access.log main;
         location / {
                 proxy_connect_timeout 3600;
                 proxy_send_timeout 3600;
