--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -1,4 +1,5 @@
 FROM yeszao/php:5.4.45-fpm-alpine
-COPY ./edms /home/edsm/
+RUN mkdir /home/edms
+COPY /edms /home/edsm/
 WORKDIR /home/edms/
 CMD [ "php", "/home/edms/index.php" ]
