--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -1,5 +1,5 @@
 FROM yeszao/php:5.4.45-fpm-alpine
-RUN mkdir /home/edms
-COPY /edms /home/edsm/
-WORKDIR /home/edms/
-CMD [ "php", "/home/edms/index.php" ]
+RUN mkdir /edms
+COPY /edms /edsm/
+WORKDIR /edms/
+CMD [ "php", "/edms/index.php" ]
