--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MYSQL_ROOT_PASSWORD=rootpassword
-MYSQL_DATABASE=default-db
-MYSQL_USER=user
-MYSQL_PASSWORD=userpassword
+MYSQL_DATABASE=demodocsdb
+MYSQL_USER=demo-docs
+MYSQL_PASSWORD=UQkhYLIzhfsNp
