--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -6,7 +6,7 @@ server {
 }
 
 server {
-        listen 443 http2 ssl;
+        listen 443 ssl; #http2
         server_name demo-docs.itsec.md www.demo-docs.itsec.md;
 
         ssl_protocols TLSv1.3 TLSv1.2;
